@@ -19,17 +19,17 @@
 
 package org.elasticsearch.plugins;
 
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
+
+import java.util.Collections;
+
 import org.elasticsearch.Build;
 import org.elasticsearch.Version;
 import org.elasticsearch.cli.ExitCodes;
 import org.elasticsearch.cli.MockTerminal;
 import org.elasticsearch.cli.UserException;
 import org.elasticsearch.test.ESTestCase;
-
-import java.util.List;
-
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.equalTo;
 
 public class InstallLicensedPluginTests extends ESTestCase {
 
@@ -87,7 +87,7 @@ public class InstallLicensedPluginTests extends ESTestCase {
             Version.CURRENT,
             "java version",
             "classname",
-            List.of(),
+            Collections.emptyList(),
             false,
             PluginType.ISOLATED,
             "",
